--- a/signin.html
+++ b/signin.html
@@ -520,7 +520,7 @@ document.addEventListener("DOMContentLoaded", () => {
         }
 
         try {
-            const response = await fetch("http://127.0.0.1:8000/login/", {
+            const response = await fetch("https://vuno-1.onrender.com/login/", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
@@ -558,7 +558,7 @@ async function getProfile() {
     if (!token) return console.error("❌ No access token found");
 
     try {
-        const res = await fetch("http://127.0.0.1:8000/profile/", {
+        const res = await fetch("https://vuno-1.onrender.com/profile/", {
             headers: {
                 "Authorization": `Bearer ${token}`,
                 "Content-Type": "application/json"
