Added signup and signin pages with token authentication

--- a/contact.html
+++ b/contact.html
@@ -358,6 +358,8 @@ ws = new WebSocket(`${protocol}${window.location.host}/ws/call/${meetingId}/`);
   document.addEventListener("DOMContentLoaded", startMyVideo);
 </script>
 
+
+ <!--mic-->
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const micBtn = document.getElementById("mic-toggle");
