--- a/meeting.html
+++ b/meeting.html
@@ -438,9 +438,8 @@ document.addEventListener("DOMContentLoaded", async () => {
           Loading link...
         </p>
         <button id="copy-button" class="flex-shrink-0 p-2 text-blue-600 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-300 hover:bg-blue-50 dark:hover:bg-gray-600 rounded-md transition-colors duration-200" aria-label="Copy link">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
-          </svg>
+          <img src='duplicate.png' class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+           
         </button>
       </div>
     </div>
